--- a/gallery.html
+++ b/gallery.html
@@ -40,7 +40,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="director.html">Director Message</a>
                         <a class="dropdown-item" href="./message.html">Principal Message</a>
-                        <a class="dropdown-item" href="faculty.html">Faculty</a>
+        
                         <a class="dropdown-item" href="uniform.html">School Uniform</a>
                         <a class="dropdown-item" href="ourschl.html">Our School</a>
                         <a class="dropdown-item" href="rule.html">School Rules</a>
@@ -54,8 +54,8 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="activity.html">Activity Calender</a>
                         <a class="dropdown-item" href="celeb.html">Celebrations</a>
-                        <a class="dropdown-item" href="annual.html">Annual Report</a>
-                        <a class="dropdown-item" href="book.html">Booklist</a>
+                        <a class="dropdown-item" href="ANNUAL_REPORT_2024.pdf" target="_blank">Annual Report</a>
+                       
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
                             style="margin-left: 17px;">
@@ -132,34 +132,34 @@
                 <div class="card">
        <a href="farwell.html">  <img src="./photos/Garden.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
-                        <h5 class="card-title"> <a href="farwell.html">Farwell</a></h5>
+                        <h5 class="card-title"> <a href="farwell.html">Farewell</a></h5>
 
                     </div>
                 </div>
             </div>
             <div class="col mb-4 ">
                 <div class="card">
-                    <img src="./photos/Garden.jpg" class="card-img-top" alt="...">
+                    <a href="farwell.html">    <img src="./photos/Garden.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
-                        <h5 class="card-title"><a href="#">Nanital Tour</a></h5>
+                        <h5 class="card-title"><a href="#">Nanital Trip</a></h5>
 
                     </div>
                 </div>
             </div>
             <div class="col mb-4 ">
                 <div class="card">
-                    <img src="./photos/Garden.jpg" class="card-img-top" alt="...">
+                    <a href="farwell.html">    <img src="./photos/Garden.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
-                        <h5 class="card-title"><a href="#">Prize </a></h5>
+                        <h5 class="card-title"><a href="#">Reward Ceremony</a></h5>
 
                     </div>
                 </div>
             </div>
             <div class="col mb-4 ">
                 <div class="card">
-                    <img src="./photos/Garden.jpg" class="card-img-top" alt="...">
+                    <a href="School.html">      <img src="./photos/Garden.jpg" class="card-img-top" alt="..."></a>
                     <div class="card-body">
-                        <h5 class="card-title"><a href="#">School</a></h5>
+                        <h5 class="card-title"><a href="#">Hisar Trip</a></h5>
 
                     </div>
                 </div>
