--- a/indoor.html
+++ b/indoor.html
@@ -40,7 +40,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="director.html">Director Message</a>
                         <a class="dropdown-item" href="./message.html">Principal Message</a>
-                        <a class="dropdown-item" href="faculty.html">Faculty</a>
+                    
                         <a class="dropdown-item" href="uniform.html">School Uniform</a>
                         <a class="dropdown-item" href="ourschl.html">Our School</a>
                         <a class="dropdown-item" href="rule.html">School Rules</a>
@@ -54,8 +54,8 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="activity.html">Activity Calender</a>
                         <a class="dropdown-item" href="celeb.html">Celebrations</a>
-                        <a class="dropdown-item" href="Annual.html">Annual Report</a>
-                        <a class="dropdown-item" href="book.html">Booklist</a>
+                        <a class="dropdown-item" href="ANNUAL_REPORT_2024.pdf" target="_blank">Annual Report</a>
+                      
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
                             style="margin-left: 17px;">
